tests/resources/errors/errors_destructors11.ac
import std;
import std.Error;

struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "error raised!";
    }

    fn delete() {
        std.print("destructor called!");
    }
}

fn foo() -> int | raises TestError {
    raise TestError{};
}

fn main() {
    a: int = try err: foo() {
        std.print("caught error!");
        recover 55;
    };
    std.print("end!");
}